localization of the offline startpage, bug 82580 - patched by goofy. * replace the "welcome to komodo" image with text, so it can be localized * renamed edit_offline.html as edit_offline.xhtml so can contain xml entities * modified links to offline page in startpage.xml * added offline.dtd file in the locale folder * tweaked css in order to make all entries visible (dropped some padding)
git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@3423 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/content/startpage/offline/css/iframe.css
+++ b/src/chrome/komodo/content/startpage/offline/css/iframe.css
@@ -39,7 +39,7 @@ a img {
 }
 
 #mainleft div.content {
-    padding: 24px 30px 0 20px;
+    padding: 0 30px 0 20px;
     margin: 0;
 }
 
@@ -58,7 +58,7 @@ a img {
 #mainleft div.content p {
     width: 75%;
     margin: 0;
-    padding: 10px 0 0 0;
+    padding: 4px 0 0 0;
 }
 
 #mainright {
